Now you can get pets according to your preferences!
